<resources>
    <string name="app_name">Student Planner</string>
    <string name="back">Kembali</string>
    <string name="sign_in">Masuk</string>
    <string name="email">Email</string>
    <string name="hint_email">Masukan email kamu…</string>
    <string name="password">Password</string>
    <string name="hint_password">Masukan password kamu…</string>
    <string name="text_forgot_password">Lupa Password?</string>
    <string name="click_here">Klik Disini</string>
    <string name="text_no_have_account">Belum punya akun?</string>
    <string name="sign_up_here">Daftar Disini</string>
    <string name="sign_up">Daftar</string>
    <string name="name">Name</string>
    <string name="hint_name">Masukan nama kamu…</string>
    <string name="sign_in_here">Masuk Disini</string>
    <string name="text_have_account">Sudah punya akun?</string>
    <string name="start">Mulai</string>
    <string name="welcome">Selamat Datang</string>
    <string name="dashboard">Beranda</string>
    <string name="task">Tugas</string>
    <string name="schedule">Jadwal</string>
    <string name="consultation">Konsultasi</string>
    <string name="profile">Profil</string>
    <string name="edit_profile">Ubah Profil</string>
    <string name="language">Bahasa</string>
    <string name="give_rate">Beri Ulasan</string>
    <string name="help_center">Pusat Bantuan</string>
    <string name="logout">Keluar</string>
    <string name="add">Tambah</string>
    <string name="see_all">Lihat Semua</string>
    <string name="task_to_do">Tugas Yang Harus Dikerjakan</string>
    <string name="not_available">Belum Tersedia</string>
    <string name="education">Education</string>
    <string name="class_education">Class</string>
    <string name="add_task">Tambah Tugas</string>
    <string name="update_task">Ubah Tugas</string>
    <string name="add_task_title">Tambahkan Judul</string>
    <string name="add_task_desc">Tambahkan Deskripsi</string>
    <string name="add_task_date">Tambahkan Tanggal</string>
    <string name="add_task_priority">Tambahkan Nilai Prioritas</string>
    <string name="hint_add_task_title">Masukan judul tugas kamu…</string>
    <string name="hint_add_task_desc">Masukan deskripsi tugas kamu…</string>
    <string name="error_name">Nama harus di isi</string>
    <string name="error_email">Email tidak valid</string>
    <string name="error_password">Password minimum 6 karakter</string>
    <string name="success_sign_up">Daftar Akun Berhasil</string>
    <string name="failed_sign_up">Daftar Akun Gagal</string>
    <string name="success_sign_in">Masuk Akun Berhasil</string>
    <string name="failed_sign_in">Masuk Akun Gagal</string>
    <string name="press_back_again_to_exit">Tekan kembali untuk keluar</string>
    <string name="please_wait">Tunggu Sebentar</string>
    <string name="exit_message">Apakah yakin mau keluar?</string>
    <string name="format_date">%d-%d-%d</string>
    <string name="yes">Ya</string>
    <string name="no">Tidak</string>
    <string name="empty_task">Tidak ada Tugas</string>
    <string name="greet_message">Selamat %s</string>
    <string name="error_title">Judul tidak boleh kosong</string>
    <string name="error_description">Deskripsi tidak boleh kosong</string>
    <string name="success_add_task">Berhasil Menambah Tugas</string>
    <string name="error_add_task">Gagal Menambah Tugas</string>
    <string name="success_update_task">Berhasil Memperbaharui Tugas</string>
    <string name="error_update_task">Gagal Memperbaharui Tugas</string>
    <string name="error_upload_image">Gagal Unggah Gambar</string>
    <string name="success_delete_task">Berhasil Menghapus Tugas</string>
    <string name="error_delete_task">Gagal Menghapus Tugas</string>
    <string name="error_delete_image">Gagal Menghapus Gambar</string>
    <string name="remove_task">Apakah yakin ingin menghapus tugas %s?</string>
    <string name="success_update_profile">Berhasil Mengubah Profil</string>
    <string name="error_update_profile">Gagal Mengubah Profil</string>
    <string name="error_update_password">Gagal Mengubah Password</string>
    <string name="done">Selesai</string>
    <string name="adding_task">Tambahkan Tugas</string>
    <string name="updating_task">Mengubah Tugas</string>
</resources>