<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_shape_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/view_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingStart="@dimen/size_16"
        android:paddingTop="@dimen/size_24"
        android:text="@string/back"
        app:drawableStartCompat="@drawable/ic_arrow_back"
        app:drawableTint="@color/black_pearl"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlSymmetry" />

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:focusableInTouchMode="true"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_back">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/size_16">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.1" />

            <TextView
                android:id="@+id/label_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_64"
                android:text="@string/email"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title" />

            <EditText
                android:id="@+id/edit_text_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_4"
                android:hint="@string/hint_email"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                app:layout_constraintTop_toBottomOf="@id/label_email" />

            <TextView
                android:id="@+id/label_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_16"
                android:text="@string/password"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edit_text_email" />

            <EditText
                android:id="@+id/edit_text_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_4"
                android:hint="@string/hint_email"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:paddingEnd="@dimen/size_56"
                app:layout_constraintTop_toBottomOf="@id/label_password"
                tools:ignore="RtlSymmetry"
                tools:text="@tools:sample/lorem/random" />

            <ImageView
                android:id="@+id/image_password_visibility"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:paddingHorizontal="@dimen/size_16"
                android:src="@drawable/ic_visibility"
                app:layout_constraintBottom_toBottomOf="@id/edit_text_password"
                app:layout_constraintEnd_toEndOf="@id/edit_text_password"
                app:layout_constraintTop_toTopOf="@id/edit_text_password"
                app:tint="@color/pink_primary"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/text_forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_16"
                android:text="@string/text_forgot_password"
                app:layout_constraintEnd_toStartOf="@id/button_forgot_password"
                app:layout_constraintTop_toBottomOf="@id/edit_text_password" />

            <Button
                android:id="@+id/button_forgot_password"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/click_here"
                android:textAllCaps="false"
                android:textColor="@color/pink_primary"
                android:textStyle="bold"
                app:layout_constraintBaseline_toBaselineOf="@id/text_forgot_password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edit_text_password" />

            <com.codetron.studentplanner.view.ButtonPrimary
                android:id="@+id/button_sign_in"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_48"
                android:layout_marginStart="@dimen/size_24"
                android:layout_marginTop="@dimen/size_24"
                android:layout_marginEnd="@dimen/size_24"
                android:layout_marginBottom="@dimen/size_16"
                android:text="@string/sign_in"
                app:layout_constraintBottom_toTopOf="@id/button_sign_up_here"
                app:layout_constraintTop_toBottomOf="@id/button_forgot_password"
                app:layout_constraintVertical_bias="1" />

            <TextView
                android:id="@+id/text_no_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_16"
                android:layout_marginBottom="@dimen/size_24"
                android:text="@string/text_no_have_account"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/button_sign_up_here"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/button_sign_up_here"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up_here"
                android:textAllCaps="false"
                android:textColor="@color/pink_primary"
                android:textStyle="bold"
                app:layout_constraintBaseline_toBaselineOf="@id/text_no_account"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/text_no_account" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>