<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="@dimen/size_11">

    <com.codetron.studentplanner.view.CardFeatureItem
        android:id="@+id/feature_task"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/size_5"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        app:cardCornerRadius="@dimen/size_8"
        app:drawableFeature="@drawable/ic_task"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/feature_schedule"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:textFeature="@string/task" />

    <com.codetron.studentplanner.view.CardFeatureItem
        android:id="@+id/feature_schedule"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/size_5"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        app:cardCornerRadius="@dimen/size_8"
        app:drawableFeature="@drawable/ic_task"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/feature_consultation"
        app:layout_constraintStart_toEndOf="@id/feature_task"
        app:layout_constraintTop_toTopOf="parent"
        app:textFeature="@string/schedule" />

    <com.codetron.studentplanner.view.CardFeatureItem
        android:id="@+id/feature_consultation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/size_5"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        app:cardCornerRadius="@dimen/size_8"
        app:drawableFeature="@drawable/ic_task"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/feature_schedule"
        app:layout_constraintTop_toTopOf="parent"
        app:textFeature="@string/consultation" />

</androidx.constraintlayout.widget.ConstraintLayout>