<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/image_logo"
        android:layout_width="42dp"
        android:layout_height="49dp"
        android:layout_marginStart="@dimen/size_16"
        android:layout_marginTop="@dimen/size_24"
        android:src="@drawable/ic_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <com.codetron.studentplanner.view.TextViewMain
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size_8"
        android:text="@string/app_name"
        app:layout_constraintBottom_toBottomOf="@id/image_logo"
        app:layout_constraintStart_toEndOf="@id/image_logo"
        app:layout_constraintTop_toTopOf="@id/image_logo"
        app:showTextApp="false" />

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_logo">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/size_16">

            <ImageView
                android:id="@+id/image_illustration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_illustration"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.2"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/text_welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_16"
                android:text="@string/welcome"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/image_illustration" />

            <com.codetron.studentplanner.view.TextViewMain
                android:id="@+id/text_app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_welcome"
                app:showTextApp="true" />

            <com.codetron.studentplanner.view.ButtonPrimary
                android:id="@+id/button_start"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_48"
                android:layout_marginStart="@dimen/size_24"
                android:layout_marginTop="@dimen/size_24"
                android:layout_marginEnd="@dimen/size_24"
                android:layout_marginBottom="@dimen/size_16"
                android:text="@string/start"
                app:layout_constraintBottom_toTopOf="@id/button_sign_up_here"
                app:layout_constraintTop_toBottomOf="@id/text_app_name"
                app:layout_constraintVertical_bias="1" />

            <TextView
                android:id="@+id/text_no_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_16"
                android:layout_marginBottom="@dimen/size_24"
                android:text="@string/text_no_have_account"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/button_sign_up_here"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/button_sign_up_here"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_24"
                android:text="@string/sign_up_here"
                android:textAllCaps="false"
                android:textColor="@color/pink_primary"
                android:textStyle="bold"
                app:layout_constraintBaseline_toBaselineOf="@id/text_no_account"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/text_no_account"
                app:layout_constraintTop_toBottomOf="@id/button_start"
                app:layout_constraintVertical_bias="1" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>